--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
           <img class="img_11" src="https://dsm01pap009files.storage.live.com/y4mJ2UycuYt8RTi53g-fDnAW_O6VzdRA4mKYepvXTzp4J8mvtSTicsfSs48S504PczU3Hu68E-gN54wdYKal-l4fQmMlct3GcrLy9zZxbR97fUnF4xkTYXz8tpXjF3jbpg4VNiRmtRkS4iow8aTlvd5woz91CspHMOq9OgscpsSqUdcA9YNcChxCNfof7zRZ5qL?width=720&height=720&cropmode=none" />
 
-          <p class="p_11">Welcome to my Web Stite, Finally!</p>
+          <p class="p_11">Welcome to my Web Site, Finally!</p>
           <hr class="hr_11">
 
           <h1 class="h1_11">Daniel Carter</h1>
