--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
 
             He divides humanity into four main categories: Intelligent, Bandit, Helpless, Stupid. All are defined on the basis of a win/lose concept, slightly echoing the prisoner’s dilemma. The question is: what category are you in?</p>
 
-        <img class="idiot" src="/home/blender/Code/blog/images/idiot.jpg" alt="idiot">
+        <img class="idiot" src="https://dsm01pap009files.storage.live.com/y4mpMuTSSnr4nfgpb2ZlrAVTcd8lFiHwFec14fkSjY_VJvxN4FyknMQJDhNydhyDFPZZywWokGhwuV-WN0KWZaSmaYuB3N3r9u51PUWC3j2QJyWEotn2jzny2bj70dtzCZL37nbyXVsRzOCjQbqIPVypvED7DRUJRsaQIdFVAJjzX4vnwNQCu2PfHXj-earorOZ?width=546&height=900&cropmode=none" alt="idiot">
 
         <table class="tbl_21">
             <tr>
@@ -293,7 +293,7 @@
                 <p>Cipolla postulates that stupidity is a variable that remains constant in all populations. Every category you can imagine – gender, ethnicity, nationality, education, income – has a fixed percentage of stupid people. University professors can be stupid. There are US presidents who have been and/or are stupid. Finally, there are stupid people in every nation on Earth. How many idiots are there among us? Impossible to answer (500 according to the police, 3 million according to the trade unionists, 65 million according to Manu). Moreover, any assumption would certainly violate the first law.</p>
                 <h3>Third law:</h3>
                 <p>Cipolla calls it <strong>the golden law of stupidity.</strong> A stupid person, according to the economist, is a person who causes problems for others without any clear benefit for himself. Uncle couldn’t help but post fake articles on Facebook? It is stupid. The receptionist at your hotel who keeps you on the phone for an hour, hangs up on you twice and still manages to screw up your reservation? Stupid.<br><br>This law also introduces <strong>three other phenotypes</strong> that, according to Cipolla, coexist with stupidity. First, there is the <strong>intelligent person,</strong></span> whose actions benefit both himself and others. Then comes the <strong>bandit,</strong> who gets rich at the expense of others. And finally, <strong>the abused,</strong> the defenseless person, whose actions enrich others at his own expense. Cipolla imagined the four types along a graph, like this:</p>
-                <img id="chart" title="Cipolla's chart on the different types of stupid people" src="/home/blender/Code/blog/images/chart.jpg" alt="Cipolla's chart on the different types of stupid people">
+                <img id="chart" title="Cipolla's chart on the different types of stupid people" src="https://dsm01pap009files.storage.live.com/y4m8tOpruOWsYIeHsvBLiX9eettkjoqVSQuUFe-3sGj98-csCYFQUJRR5jqeW87evYrc_gIGYq559Nfjaa1NepVZDUgIISSF1WmAVALZ4DbGm9EcZoq436yPlMPEJUu5CQ78Dg1lYjna0o3nRIbKxjmVZ8IZZNjPzIkNbf8WNHZGZO4rOdlRvmj1AhpAPbuJTv1?width=585&height=596&cropmode=none" alt="Cipolla's chart on the different types of stupid people">
                 <p><strong>Explanation :</strong><br><br>
 
                     -If Tom takes an action and suffers a loss while producing a gain for Roman, Tom’s mark will fall in the Helpless field: Tom has been abused.<br><br>
